Change log for zeit.web
=======================

3.4 (unreleased)
----------------

- ZON-3120: Add LazyProxy support for TMS auto areas


3.3 (2016-09-05)
----------------

- ZON-2949: Update clicktracking for pagination

- ZON-2410: Show byline on video-related items

- ZON-2375: Show still image copyright on video-related items

- FIX: Clearly specify where to use a fallback image


3.2 (2016-09-02)
----------------

- HOTFIX: Avoid XMLReference updating triggered by synthesized gallery blocks

- BUG-517: Allow Adtile7 to be wide on ZMO

- FIX: Fix infographics


3.1 (2016-08-31)
----------------

- BUG-514: Fix font size for infobox content blocks

- BUG-511: Right align user menu

- BUG-333: Fix storystream text-overflow character color

- BUG-466: Add Video slugs to comment URLs (prevents superfluous redirects)

- ZON-3241: Add zplus badges to CP teasers

- ZON-3276: Add Z+ parquet region

- ZON-3258: Make customer ID available for webtrekk inside wrapper app

- FIX: Restore ratio for mobile infographics (lost in the 3.0 image merge)


3.0 (2016-08-29)
----------------

- FIX: ZMO infographic

- BUG-508: Hide advertorial links in 1st level navigation without flexbox

- ZON-1586: Overhaul image handling, remove bitblt

- ZON-3262: Add dossier teaser


2.100.2 (2016-08-25)
--------------------

- Hotfix: ZMO Macro fix: use macro OR template (never both)


2.100.1 (2016-08-25)
--------------------

- Hotfix: Move ZMO image macro to template block


2.100 (2016-08-25)
------------------

- BUG-397: Disable jobbox if feed is empty

- BUG-416: Let keywordpage redirects respect pagination slugs

- BUG-481: Restrict gallery images to 100% of container width

- BUG-492: Remove series banner from breaking news and embed header articles

- BUG-493: Add spacing to column items in mobile navigation

- BUG-499: Fix xml.zeit.de routing for column articles

- BUG-504: Fix position of adplace 3 for mobile

- BUG-509: Insert Celera One tracking script without using jQuery
